fix overflow on home page

--- a/_sass/views/_landing.scss
+++ b/_sass/views/_landing.scss
@@ -16,8 +16,8 @@
 		justify-content: center;
 		img {
 			width: -webkit-fill-available;
-		    max-width: 500px;
-		    height: 100%;
+		    max-width: 50ch;
+		    width: 100%;
 		}
 	}
 
